--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@
 uvicorn
 fastapi
 jinja2
+python-multipart
 
 # ML --------------------------------------
 ultralytics
@@ -15,6 +16,7 @@ scipy>=1.4.1
 torch>=1.8.0
 torchvision>=0.9.0
 tqdm>=4.64.0
+yt-dlp
 
 # Plotting --------------------------------------
 pandas>=1.1.4
