--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,18 @@
-events { worker_connections 1024; }
+events { }
 
 http {
-    upstream backend_nodes {
-        server backend:8000;
-        # You can add more backend instances here if needed
-    }
-
     server {
         listen 80;
-        # server_name your_domain.com;
 
         location / {
-            proxy_pass http://frontend:3000;  # Forward requests to the frontend service
+            proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /api/ {
-            proxy_pass http://backend_nodes;
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
