--- a/ml/.gitignore
+++ b/ml/.gitignore
@@ -2,9 +2,7 @@ datasets
 runs
 .ipynb_checkpoints
 api_key.txt
-yolov8n.pt
-yolov8n-pose.pt
-data.yaml
-video_gun_gunner_labels.json
-video_labels.json
-pose_estim_model.ipynb
+./data.yaml
+./video_gun_gunner_labels.json
+./video_labels.json
+./pose_estim_model.ipynb
